app/src/main/java/com/example/phone/utility/network/errors/FiatNotAccepted.java
package com.example.phone.utility.network.errors;

/**
 * Exception thrown if a given API does not accept a given fiat currency
 */
public final class FiatNotAccepted extends Exception {
}
